Change to TinkerTest

--- a/template/index.html
+++ b/template/index.html
@@ -1,5 +1,5 @@
 [% WRAPPER 'layout.html'
-            page_title="Tinker"
+            page_title="TinkerTest"
 %]
 [% INCLUDE 'nav-top.html' %]
 
@@ -17,9 +17,9 @@
             pane_title="YAML Input"
 %]
 [% INCLUDE 'pane-output.html'
-            placeholder="Press the "Tinker!" Button…",
-            classes="tinker output",
-            pane_title="Tinker Output"
+            placeholder="Press the "Test!" Button…",
+            classes="tinkertest output",
+            pane_title="TinkerTest Output"
 %]
 
   </div>
