--- a/template/pane-output.html
+++ b/template/pane-output.html
@@ -1,4 +1,4 @@
 <div class="col-xs-4">
-  <pre class="[% classes %]">Press the "Tinker!" Button…</pre>
+  <pre class="[% classes %]">Press the "Test!" Button…</pre>
   <h2>[% pane_title %]</h2>
 </div>
