--- a/template/nav-top.html
+++ b/template/nav-top.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <button type="button" class="tinker btn btn-default navbar-btn">Tinker!</button>
+    <button type="button" class="tinkertest btn btn-default navbar-btn">Test!</button>
   </div>
 </nav>
